<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@android:color/transparent"
        android:bottomLeftRadius="8dp"
        android:onClick="addNumber"
        android:stateListAnimator="@null"
        android:text="@string/_8"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_9"
        app:layout_constraintEnd_toStartOf="@+id/btn_3"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/transparent"
        android:bottomLeftRadius="8dp"
        android:onClick="addNumber"
        android:stateListAnimator="@null"
        android:text="@string/_0"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_8"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="45dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="addNumber"
        android:stateListAnimator="@null"
        android:text="@string/_7"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_8"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="addNumber"
        android:stateListAnimator="@null"
        android:text="@string/_9"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_6"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="addNumber"
        android:stateListAnimator="@null"
        android:text="@string/_5"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_6"
        app:layout_constraintEnd_toStartOf="@+id/btn_3"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="45dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="addNumber"
        android:stateListAnimator="@null"
        android:text="@string/_4"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_5"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="addNumber"
        android:stateListAnimator="@null"
        android:text="@string/_6"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_3"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="45dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="addNumber"
        android:stateListAnimator="@null"
        android:text="@string/_1"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btn_dial_1"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="135dp"
        android:backgroundTint="#1E1E1E"
        android:onClick="speedDial"
        android:stateListAnimator="@null"
        android:text="@string/dash"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_dial_2"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#1E1E1E"
        android:onClick="speedDial"
        android:stateListAnimator="@null"
        android:text="@string/dash"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_dial_1"
        app:layout_constraintEnd_toStartOf="@+id/btn_dial_3"
        app:layout_constraintStart_toEndOf="@+id/btn_dial_1"
        app:rippleColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_dial_3"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="#1E1E1E"
        android:onClick="speedDial"
        android:stateListAnimator="@null"
        android:text="@string/dash"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_dial_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="addNumber"
        android:stateListAnimator="@null"
        android:text="@string/_2"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_3"
        app:layout_constraintEnd_toStartOf="@+id/btn_3"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="addNumber"
        android:stateListAnimator="@null"
        android:text="@string/_3"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/white" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/delete"
        android:onClick="deleteNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_delete"
        app:tint="#E91E63" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:background="@null"
        android:focusable="false"
        android:inputType="none"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textIsSelectable="true"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/btn_call"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/call"
        android:onClick="callNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_0"
        app:srcCompat="@android:drawable/ic_menu_call"
        app:tint="#4CAF50"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>